--- a/.env
+++ b/.env
@@ -3,3 +3,7 @@ NEXT_PUBLIC_API_URL=http://localhost:5000/api/v1
 
 # Environment
 NODE_ENV=development
+
+NEXT_PUBLIC_MQTT_URL=ws://localhost:8884/mqtt
+NEXT_PUBLIC_MQTT_USERNAME=client123
+NEXT_PUBLIC_MQTT_PASSWORD=Client123
