--- a/.env
+++ b/.env
@@ -7,3 +7,8 @@ NODE_ENV=development
 NEXT_PUBLIC_MQTT_URL=ws://localhost:8884/mqtt
 NEXT_PUBLIC_MQTT_USERNAME=client123
 NEXT_PUBLIC_MQTT_PASSWORD=Client123
+
+
+# https://www.builder.io/c/docs/using-your-api-key
+NEXT_PUBLIC_BUILDER_API_KEY=c79cf269f69248cd9d013980ef5dbb18
+
