--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 # Backend API Configuration
-NEXT_PUBLIC_API_URL=http://localhost:5001/api/v2
+NEXT_PUBLIC_API_URL=https://api2.scoliv2.com/api/v2
 
 # Environment
 NODE_ENV=development
 
-NEXT_PUBLIC_MQTT_URL=ws://localhost:8884/mqtt
+NEXT_PUBLIC_MQTT_URL=wss://scoliv2.com/mqtt/
 NEXT_PUBLIC_MQTT_USERNAME=client123
 NEXT_PUBLIC_MQTT_PASSWORD=Client123
 
